--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Tirage de la JCCS
+title: Tirage
 email: niclupien@gmail.com
 description: ""
 baseurl: "/tirage-jccs" # the subpath of your site, e.g. /blog
