--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,6 @@ title: Tirage
 email: niclupien@gmail.com
 description: ""
 baseurl: "/tirage-jccs" # the subpath of your site, e.g. /blog
-url: "http://niclupien.github.io/tirage-jccs" # the base hostname & protocol for your site
+url: "http://gabrielgallagher.github.io/jccs-casino-tirage" # the base hostname & protocol for your site
 # Build settings
 markdown: kramdown
